--- a/SASS/SCSS/demo.scss
+++ b/SASS/SCSS/demo.scss
@@ -86,7 +86,7 @@ nav ul li{
     /* Contacto*/
 
 
-#consulta{font-family:'Kiwi Maru', serif; 
+#consulta{font-family: serif; 
      text-align: left; 
      font-size: 1.4rem;
      padding-left: 10px;
