--- a/SASS/SCSS/_textosyportada.scss
+++ b/SASS/SCSS/_textosyportada.scss
@@ -46,7 +46,7 @@ video{
 
 }
 
-#ubicacion{font-family:'Kiwi Maru', serif;
+#ubicacion{font-family:'Open Sans', sans-serif ;
        font-size: 1,4rem;
        font-weight: bold;
         margin-top: -55px; 
