bold type consulta

--- a/SASS/SCSS/demo.scss
+++ b/SASS/SCSS/demo.scss
@@ -87,6 +87,7 @@ nav ul li{
 
 
 #consulta{font-family: 'Open Sans', sans-serif ;
+     font-weight: bold;
      text-align: left; 
      font-size: 1.5rem;
      padding-left: 10px;
