--- a/SASS/SCSS/_textosyportada.scss
+++ b/SASS/SCSS/_textosyportada.scss
@@ -46,9 +46,8 @@ video{
 
 }
 
-#ubicacion{font-family:'Open Sans', sans-serif ;
+#ubicacion{
        font-size: 1,4rem;
-       font-weight: bold;
         margin-top: -55px; 
       }
 
