--- a/SASS/SCSS/demo.scss
+++ b/SASS/SCSS/demo.scss
@@ -86,8 +86,8 @@ nav ul li{
     /* Contacto*/
 
 
-#consulta{font-family: 'Open Sans', sans-serif ;
-     font-weight: bold;
+#consulta{
+    
      text-align: left; 
      font-size: 1.5rem;
      padding-left: 10px;
