--- a/SASS/SCSS/_textosyportada.scss
+++ b/SASS/SCSS/_textosyportada.scss
@@ -48,7 +48,10 @@ video{
 
 #ubicacion{
        font-size: 1,4rem;
-        margin-top: -55px; 
+        margin-top: -55px;
+       font-family: serif;
+       font-weight: bold;
+       
       }
 
    
