tamaño texto aprende inglés

--- a/SASS/SCSS/demo.scss
+++ b/SASS/SCSS/demo.scss
@@ -220,7 +220,7 @@ background-color: #f0f3f5;
                    }
              
          
- .textoPortada{    font-size: 1.2rem;
+.backgroundPortada__textoPortada { font-size: 1.2rem;
                    text-align: start; }
    
  .tituloNegro {    font-size: 1.7rem;
