--- a/SASS/SCSS/demo.scss
+++ b/SASS/SCSS/demo.scss
@@ -218,6 +218,7 @@ background-color: #f0f3f5;
                   padding-bottom: 30px;
                   margin: 0 auto;
                    }
+ .backgroundPortada__tituloGrande { padding-top: 20px}
              
          
 .backgroundPortada__textoPortada { font-size: 1.2rem;
