--- a/SASS/SCSS/_bem.scss
+++ b/SASS/SCSS/_bem.scss
@@ -71,6 +71,7 @@ $colors: ( "verde": #9bf1a6,
     padding-left: 40px;
     padding-bottom: 40px;
     font-size: 2.5rem;
+    padding-top 40px;
 
  }       
 .backgroundPortada__textoPortada {
