--- a/SASS/SCSS/demo.scss
+++ b/SASS/SCSS/demo.scss
@@ -333,7 +333,9 @@ footer { margin-right: -110px;
              } 
            
           }
-   
+   .tituloGrande { 
+                       padding-top:20px;
+                  }
    
 @media (min-width:481px ) and (max-width:768px)  {
    
