--- a/SASS/SCSS/demo.scss
+++ b/SASS/SCSS/demo.scss
@@ -336,6 +336,9 @@ footer { margin-right: -110px;
    .tituloGrande { 
                        padding-top:20px;
                   }
+ .ciudades{ 
+                  font-size:1.7rem;
+                 }
    
 @media (min-width:481px ) and (max-width:768px)  {
    
