--- a/SASS/SCSS/_bem.scss
+++ b/SASS/SCSS/_bem.scss
@@ -22,7 +22,7 @@ $colors: ( "verde": #9bf1a6,
         color: rgb(78, 203, 212);}  
 }
 
- /*Bloque 2*/
+ /*Bloque 2 fondo naranja "Inicio"*/
    
 .backgroundOrange{  
      background-color:#f7aa1c;
